Fix: flash message appearing behind content

--- a/app/assets/stylesheets/koi/components/_panel.scss
+++ b/app/assets/stylesheets/koi/components/_panel.scss
@@ -114,6 +114,7 @@
   bottom: 0;
   left: 0;
   right: 0;
+  z-index: 100;
 }
 
 // PANEL LINKS
